--- a/main.css
+++ b/main.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'Bilo';
+    src: local('Bilo');
+}
+
 html, body {
     margin: 0;
     padding: 0;
@@ -21,8 +26,8 @@ body {
     height: 100%;
 }
 
-p {
+.void {
     font-family: "Bilo", "Calibri", Arial, sans-serif;
     font-weight: bold;
-    font-size: 8.5em;
+    font-size: 8em;
 }
