--- a/main.css
+++ b/main.css
@@ -15,6 +15,8 @@ body {
     background-color: black;
 
     font-size: 14px;
+
+    overflow: hidden;
 }
 
 #container {
@@ -26,12 +28,14 @@ body {
     height: 100%;
 }
 
-#void {
-    display: inline-block;
+#voidText, #voidInput {
+    display: block;
     margin: 0;
 
+    min-height: 1em;
+
     max-width: 100%;
-    word-wrap: break-word;
+    word-break: break-word !important;
 
     text-align: center;
     font-family: "Bilo", "Calibri", Arial, sans-serif;
@@ -40,7 +44,18 @@ body {
 
     line-height: 1em;
 
+    color: white;
+    background: black;
+    /* border: 1px solid white; */
+
     user-select: none;
+}
+
+[contenteditable] {
+    border: 0px solid transparent;
+    outline: 0px solid transparent;
+    caret-color: white;
+    text-decoration: none;
 }
 
 .hidden {
