--- a/main.css
+++ b/main.css
@@ -20,6 +20,15 @@ body {
     overflow: hidden;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.hidden {
+    opacity: 0 !important;
+}
+
 #container {
     display: flex;
     flex-direction: row;
@@ -29,7 +38,7 @@ body {
     height: 100%;
 }
 
-#voidText, #voidInput {
+.void {
     display: block;
     margin: 0;
 
@@ -58,10 +67,6 @@ body {
     text-decoration: none;
 }
 
-.hidden {
-    opacity: 0 !important;
-}
-
 #footer {
     position: absolute;
     bottom: 10px;
@@ -78,9 +83,8 @@ body {
         bottom: 20px;
         font-size: 1em;
     }
-}
 
-a {
-    color: inherit;
-    text-decoration: none;
+    .void {
+        font-size: 4em;
+    }
 }
