--- a/main.css
+++ b/main.css
@@ -22,7 +22,6 @@ body {
 
 a {
     color: inherit;
-    text-decoration: none;
 }
 
 .hidden {
@@ -49,7 +48,7 @@ a {
 
     text-align: center;
     font-weight: bold;
-    font-size: 8em;
+    font-size: 6em;
 
     line-height: 1em;
 
@@ -87,4 +86,44 @@ a {
     .void {
         font-size: 4em;
     }
+}
+
+.popup {
+    position: absolute;
+
+    margin: 10px;
+    padding: 15px;
+
+    max-width: 550px;
+    min-width: 100px;
+    
+    color: color;
+    background-color: #0f0f0f;
+    box-shadow: 0px 0px 50px rgba(255, 255, 255, 0.10);
+
+    border-bottom: 2px solid white;
+    border-radius: 5px;
+}
+
+h1, h2 {
+    margin: 0;
+}
+
+h2 {
+    font-weight: normal;
+}
+
+.btn {
+    cursor: pointer;
+}
+
+.close-btn {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+
+    font-size: 2em;
+    line-height: 0;
+
+    user-select: none;
 }
