--- a/main.css
+++ b/main.css
@@ -17,7 +17,8 @@ body {
     font-family: "Bilo", "Calibri", Arial, sans-serif;
     font-size: 14px;
 
-    overflow: hidden;
+    overflow-x: hidden; 
+    overflow-y: scroll;
 }
 
 a {
@@ -67,14 +68,19 @@ a {
 }
 
 #footer {
-    position: absolute;
-    bottom: 10px;
+    position: fixed;
+    bottom: 0px;
+
+    padding-top: 5px;
+    padding-bottom: 10px;
 
     width: 100%;
 
     color: #444;
     font-size: 1em;
     text-align: center;
+
+    background-color: rgba(0, 0, 0, 0.75);
 }
 
 @media only screen and (max-width: 800px) {
